# om-socket

./: .gitignore  .hlint.yaml  LICENSE  README.md  cabal.project  cabal.project.freeze  om-socket.cabal  stack.yaml
.github/workflows/: haskell.yml
examples/: Client.hs  Egress.hs  Ingress.hs  Server.hs  client.hs  egress.hs  ingress.hs  server.hs
src/OM/: Socket.hs
test/: test.hs
