cabal-version:       3.0
name:                om-socket
version:             0.9.0.1
synopsis:            Socket utilities.
-- description:         
homepage:            https://github.com/owensmurray/om-socket
license:             NONE
author:              Rick Owens
maintainer:          rick@owensmurray.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:

common warnings
  ghc-options:
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wmissing-import-lists
    -Wredundant-constraints
    -Wall

common dependencies
  build-depends:
    , aeson          >= 1.5.6.0   && < 1.6
    , base           >= 4.14      && < 4.15
    , binary         >= 0.8.8.0   && < 0.9
    , binary-conduit >= 1.3.1     && < 1.4
    , bytestring     >= 0.10.12.0 && < 0.11
    , conduit        >= 1.3.4.2   && < 1.4
    , conduit-extra  >= 1.3.5     && < 1.4
    , exceptions     >= 0.10.4    && < 0.11
    , megaparsec     >= 9.0.1     && < 9.1
    , network        >= 3.1.1.1   && < 3.2
    , safe           >= 0.3.19    && < 0.4
    , text           >= 1.2.4.1   && < 1.3
    , warp           >= 3.3.18    && < 3.4

library
  import: warnings, dependencies
  exposed-modules:     
    OM.Socket
  -- other-modules:       
  -- other-extensions:    
  hs-source-dirs: src
  default-language: Haskell2010
