cabal-version:       3.0
name:                om-socket
version:             0.9.0.3
synopsis:            Socket utilities.
-- description:         
homepage:            https://github.com/owensmurray/om-socket
license:             NONE
author:              Rick Owens
maintainer:          rick@owensmurray.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:

common warnings
  ghc-options:
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wmissing-import-lists
    -Wredundant-constraints
    -Wall

common dependencies
  build-depends:
    , aeson          >= 2.0.3.0   && < 2.1
    , base           >= 4.15.0.0  && < 4.16
    , binary         >= 0.8.8.0   && < 0.9
    , binary-conduit >= 1.3.1     && < 1.4
    , bytestring     >= 0.10.12.1 && < 0.11
    , conduit        >= 1.3.4.3   && < 1.4
    , conduit-extra  >= 1.3.6     && < 1.4
    , exceptions     >= 0.10.4    && < 0.11
    , megaparsec     >= 9.2.2     && < 9.3
    , network        >= 3.1.2.7   && < 3.2
    , text           >= 1.2.5.0   && < 1.3

library
  import: warnings, dependencies
  exposed-modules:     
    OM.Socket
  -- other-modules:       
  -- other-extensions:    
  hs-source-dirs: src
  default-language: Haskell2010
